--- a/src/Components/FooterStyles.css
+++ b/src/Components/FooterStyles.css
@@ -4,12 +4,16 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 5% 0;
+    padding-top: 1%;
     background-color: #212529;
     color: #fff;
 }
 
 @media screen and (max-width: 600px) {
+    #footer_container {
+        padding-top: 3%;
+    }
+
     #footer_bottom p {
         font-size: 0.68em;
     }
